fix: menu item content not stretching

--- a/packages/components/base/src/menu/styles/menu-item.module.scss
+++ b/packages/components/base/src/menu/styles/menu-item.module.scss
@@ -54,6 +54,8 @@
 
 .content {
   display: block;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
 .variation_bordered {
